# agentic_scGPT

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: __init__.py  check_gpu.py  download_checkpoints.py
src/: __init__.py
src/agent/: __init__.py
src/agent/scgpt/: __init__.py  agent.py  constants.py  models.py  prompt.py
src/agent/scgpt/services/: __init__.py  loader.py
src/agent/scgpt/temporal/: README.md  __init__.py  client.py  research.md  worker.py  workflows.py
src/agent/scgpt/tools/: __init__.py  annotate.py  embeddings.py  integrate.py
src/infra/: __init__.py
src/infra/mcp/: __init__.py  server.py
src/infra/temporal/: README.md  __init__.py  activities.py  config.py  policies.py
tests/: __init__.py
tests/agent/scgpt/: __init__.py  conftest.py  test_unit_models.py  test_unit_tools.py
tests/agent/scgpt/__snapshots__/: test_unit_models.ambr  test_unit_tools.ambr
tests/infra/mcp/: test_unit_server.py
