[project]
name = "agentic-scgpt"
version = "0.1.0"
description = "Pydantic AI agent exposing scGPT single-cell foundation model via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core AI/ML
    "torch>=2.0.0",
    "scgpt>=0.2.1",
    "scanpy>=1.9.0",
    "anndata>=0.10.0",

    # MCP & Agent Framework
    "fastmcp>=2.0.0",
    "pydantic-ai>=0.1.0",
    "pydantic>=2.0.0",

    # Workflow Orchestration
    "temporalio>=1.5.0",

    # Utilities
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "syrupy>=4.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Use PyTorch with CUDA support
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
